syntax = "proto3";

package proxy;
option go_package = "pb";

// Proxy is the main RPC server of the daemon.
service Lightning {

  /* obdcli: `hello`
  hello is a `say hi` gRPC.
  */
  rpc Hello (HelloRequest) returns (HelloResponse);

  rpc OpenChannel(OpenChannelRequest) returns(OpenChannelResponse);
  rpc FundChannel(FundChannelRequest) returns(FundChannelResponse);

}

message RecipientNodeInfo{
  string recipient_node_peer_id = 1;
  string recipient_user_peer_id = 2;
}

message OpenChannelRequest{
  string node_pubkey_string = 1;
  int32 node_pubkey_index = 2;
  bool private = 3;
  RecipientNodeInfo recipientInfo = 4;
}

message OpenChannelResponse{
  string template_channel_id = 1;
}

message FundChannelRequest{
  string template_channel_id = 1;
  double btc_amount = 2;
  int64 property_id = 3;
  double asset_amount = 4;
  RecipientNodeInfo recipientInfo = 5;
}

message FundChannelResponse{
  string channel_id = 1;
}

message HelloRequest {
  string sayhi = 1;
}
message HelloResponse {
  string resp = 1;
}






